--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "bleno test",
   "main": "service.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "bleno": "^0.5.0",
     "rpi-wifi-connection": "^1.0.17"
   },
